pull from aliwsome + add some file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /public/hot
 /public/storage
 /storage/*.key
+/.idea/
+.idea/
+/.idea/workspace.xml
+.idea/workspace.xml
 /vendor
 .env
 .phpunit.result.cache
